--- a/einleitung.tex
+++ b/einleitung.tex
@@ -1,15 +1,17 @@
 \chapter{Einleitung}
 \label{cha:Einleitung}
 
-Hintergrund - Motivation - Zielsetzung
-
-Warum - wieso - wesshalb?
-
-\section{Hintergrund}
-
 \section{Motivation}
 
+%Zeitlich immer mehr Relevant
+Kaum ein Gebiet existiert so lange und erlebte in den letzten 20 Jahren so einen Sprung nach Vorne in den Punkten relevant und Weiterentwicklung. 
+
+
+\section{Problemstellung}
+
 \section{Zielsetzung}
+
+Einführung in das Thema NNN
 
 %\section{Allgemeines und Motivation}
 
