--- a/kurzfassung.tex
+++ b/kurzfassung.tex
@@ -1,6 +1,14 @@
 
 \chapter{Kurzfassung}
 
+NN sind seit Jahren vorhanden
+Zeitlich bedingt nicht umsetzbar da technische Voraussetzung nicht erfüllt
+werden immer mehr eingesetzt 
+Unterstützung im Alltagsleben
+
+Ziel der Arbeit eine Einführung in die Welt der NNN mit Hilfe eines Frameworks
+
+
 %Maschinelles lernen und tiefe neuronale Netze werden unter anderem in 
 %unserem Jahrzehnt sehr häufig eingesetzt um technische Problemstellungen 
 %zu lösen, für des eine in vernünftiger Zeit keine Brauchbaren 
