--- a/literatur.bib
+++ b/literatur.bib
@@ -1,3 +1,37 @@
+@article{Hinton:Boltzman:2007,
+	AUTHOR = {Hinton, G. E.},
+	TITLE   = {{B}oltzmann machine},
+	YEAR    = {2007},
+	JOURNAL = {Scholarpedia},
+	VOLUME  = {2},
+	NUMBER  = {5},
+	PAGES   = {1668},
+	DOI     = {10.4249/scholarpedia.1668},
+	NOTE    = {revision \#91075}
+}
+
+@book{demuth2014neural,
+  title={Neural network design},
+  author={Demuth, Howard B and Beale, Mark H and De Jess, Orlando and Hagan, Martin T},
+  year={2014},
+  publisher={Martin Hagan}
+}
+
+@book{rojas2013neural,
+  title={Neural networks: a systematic introduction},
+  author={Rojas, Ra{\'u}l},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{feller1968introduction,
+  title={An introduction to probability theory and its applications: volume I},
+  author={Feller, William},
+  volume={3},
+  year={1968},
+  publisher={John Wiley \& Sons New York}
+}
+
 @article{bishop2006pattern,
   title={Pattern recognition},
   author={Bishop, Christopher M},
