example started - todo last step

--- a/_DaBa.tex
+++ b/_DaBa.tex
@@ -83,7 +83,7 @@
 \tableofcontents
 %%%----------------------------------------------------------
 
-\include{vorwort}		% ggfs. weglassen
+%\include{vorwort}		% ggfs. weglassen
 \include{kurzfassung}
 \include{abstract}
 
@@ -95,7 +95,7 @@
 \include{begriffe}
 \include{tensorflow}
 \include{keyPointDetection}
-%\include{Zusammenfassung_Ausblick} % Stephan TODO
+\include{zusammenfassungAusblick} % Stephan TODO
 %\include{diplomschrift}
 %\include{latex}
 %\include{abbildungen}
