--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -518,9 +518,7 @@ Dieses Tool ermöglicht es einem in das Verhalten eines Graphen ein wenig Einsic
 \paragraph{Namesbereiche (\textit{tf.name\_scope})} stellen eine Hilfe für die Darstellung und die Lesbarkeit des visualisierten Graphen dar. 
 Durch die Verwendung des Python-Schlüsselwortes \textit{with} wird eine Ressource verwaltet und wieder freigegeben. 
 In Verwendung mit \textit{tf.name\_scope} werden alle Operationen und Tensoren in diesem Block in der Visualisierung in einen benannten Block zusammengefasst.
-
-\begin{figure}
-
+\begin{figure}[ht!]
 \lstset{language=Python}
 \begin{lstlisting}
 import tensorflow as tf
