--- a/einleitung.tex
+++ b/einleitung.tex
@@ -4,14 +4,65 @@
 \section{Motivation}
 
 %Zeitlich immer mehr Relevant
-Kaum ein Gebiet existiert so lange und erlebte in den letzten 20 Jahren so einen Sprung nach Vorne in den Punkten relevant und Weiterentwicklung. 
+Kaum ein Gebiet existiert so lange wie maschinelles Lernen und erlebte in den letzten 20 Jahren so einen Aufschwung in den Punkten Relevanz, Weiterentwicklung und Alltagstauglichkeit wie kein anderes Gebiet der Informationstechnologie. 
+Ein Umstand dafür ist unter anderem die technische Voraussetzung große System zu entwickeln und diese auch der Menschheit zugänglich zu machen. 
+In speziellen wurde hierbei der Fokus auf Neuronale Netzwerke gelegt welche noch heute weiter erforscht werden, aber auch schon im Einsatz sind. \newline
 
+\noindent
+Die großen Datenmengen die in den letzten Jahren zu verarbeiten und zu analysieren sind, stellen ein Problem dar. 
+So befindet sich kein Mensch in der Lage, effizient Millionen an Datensätzen zu analysieren und Zusammenhänge darin zu finden und dies in adäquater Zeit. \newline
+%\noindent
+%Eine sehr hartnäckige Behauptung im Zusammenhang mit maschinellem Lernen ist, dass dieses Spiel aufgrund der vielen strategischen Elemente nicht erfolgreich
+%durch eine Maschine gespielt werden kann.
+
+\noindent
+Im Zuge dieser Arbeit sollen die Grundlagen im Bereich maschinellen Lernens im speziellen mit Neuronale Netzwerke näher gebracht werden. 
+Dabei sollte gezeigt werden wie weit sich diese in der Praxis einsetzen lassen. 
 
 \section{Problemstellung}
 
+Die grundlegende Problemstellung lässt sich in einer Frage beschreiben. \newline
+
+Wie weit ist TensorFlow als Bibliothek im Gebiet des maschinellen Lernens in praktischen Fällen einsatzfähig? \newline
+
+\noindent
+In dieser Frage steckt mehrere nichttriviale Punkte. 
+
+\noindent
+Ein Punkt stellt das Gebiet des maschinellen Lernens generell dar, sowie die praktische Umsetzung von Problemstellungen. 
+Im speziellen bieten Neuronale Netzwerke neue Möglichkeiten Probleme in der Informationstechnologie zu lösen, sowie Vorgänge in der Natur besser zu verstehen. \newline
+
+\noindent
+Zum anderen was ist TensorFlow, für was steht dies und für was kann dies Eingesetzt werden. 
+Denn diese Bibliothek bietet eine gute Unterstützung sich dem Gebiet des maschinellen Lernens zu näher aber auch die Möglichkeit dies in praktischen Fällen einzusetzen. 
+
+%Des Weiteren wird dies auch durch die großen Datenmassen weiter getrieben, da diese weder von einem Menschen noch von einem Algorithmus effizient analysiert werden können. 
+%Dies kommt zustande, da sich die Daten sehr schnell verändern mit welchen meist gearbeitet wird und somit ein klassischer Algorithmus erst angepasst werden muss. 
+%Mit maschinellen Lernen kann dieser Schritt oft zum Teil übersprungen werden und indirekt mit der Ergebnis Analyse fortgesetzt werden. \newline
+
 \section{Zielsetzung}
 
-Einführung in das Thema NNN
+%Einführung in das Thema NNN
+
+Die Arbeit soll das Thema maschinelles Lernen - Neuronale Netzwerke so beleuchten, dass des es möglich ist diese mit den Grundlagen zu verstehen und zu erlernen. 
+Im Weiteren wird die Bibliothek TensorFlow näher gebracht, welche die Möglichkeit bietet eine Problemstellung zu lösen und diese Lösung direkt praktisch einzusetzen. \newline
+
+\noindent
+Die Betrachtung der benötigten Punkte sowie Gebiete sollte auf breiter Front erfolgen, am Ende sollte jeder Leser ein Verständnis dafür haben. 
+Außerdem sollte er in der Lage sein den Umfang einer solchen Aufgabenstellung fest zu stellen. 
+Als Konsequenz aus dieser Betrachtungsweise könne allerdings nicht alle Punkte in ihrer Tiefe erfasst werden. 
+Insbesondere wenn es thematisch in die Tiefe geht. 
+Hier ist es erforderlich noch weiter Lektüre einzubeziehen und diese zu studieren. \newline
+
+\noindent
+Im Ende der Arbeit wird eine möglichen Lösung für ein praktisches Beispiel entwickelt und näher erklärt.
+Dieses wird als praktische Repräsentation verwendet, um den Umfang der Bibliothek noch besser zu verstehen. \newline
+
+\noindent
+Die Wissensvermittlung, dass mit dieser Technik der Datenanalyse, jegliche Problemstellung lösen lässt, ist ausdrücklich kein Ziel dieser Arbeit. 
+Des Weiteren wird teilweise nicht Tiefer auf Themen eingegangen, da dies den Rahmen dieser Arbeit übertreffen würde. 
+Diese Arbeite sollte aber als möglicher Startpunkt, für einen Einstieg in die Welt des maschinellen Lernens - Neuronale Netzwerke dienen. 
+
 
 %\section{Allgemeines und Motivation}
 
